# plate_inverse_problem

./: .gitignore  .gitmodules  README.md
data/processed_afcs/: afc_mag_fe.npy  afc_mag_ti.npy  afc_ph_fe.npy  afc_ph_ti.npy  afc_x_fe.npy  afc_x_ti.npy
examples/: .gitignore  Demo.ipynb  _problem.edp  _strip.edp  _strip_shifted.edp  basics.py  cpu_benchmark.py  test_cpp_lib.py
jax_plate/: Problem.py  pyFFInterface.py
source/: main_forward_fe.py  main_forward_ti.py  main_inverse_consec_fe.py  main_inverse_fe.py  setup.py
source/edps/: ideal_shifted_strip_fe.edp  ideal_shifted_strip_ti.edp  real_shifted_strip_fe.edp  real_shifted_strip_ti.edp
source/jax_plate/: Accelerometer.py  Geometry.py  Input.py  Material.py  Optimizers.py  ParamTransforms.py  Problem.py  Sparse.py  Utils.py  __init__.py  _problem.edp  pyFFInterface.py
source/jax_plate/accelerometers/: AP1030.json
source/jax_plate/geometry/: sh_i.edp  symm.edp
source/jax_plate/materials/: Example_material.json
source/jax_plate_lib/: CMakeLists.txt  create.sh  run_cmake.sh
source/jax_plate_lib/include/: InnerState.h  csc_matvec.h  test_function.h  umfpack_interface.h
source/jax_plate_lib/src/: main.cpp
source/optimization/: 2023_03_14_12_34_14
source/pyFreeFem/: FreeFemIO.py  edpScript.py  functions.py
source/pyFreeFem/FreeFemTools/: FreeFemStatics.py
